	* src/MediaView.py: remove obsolete pexists check

2004-11-16 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DateParser.py: Typo.

	* src/DateParser.py: Switch from utf8 strings to unicode.
	* src/DateDisplay.py: Switch from utf8 strings to unicode.
	* src/dates/Date_ru.py: Switch from utf8 strings to unicode.
	* src/dates/Date_fr.py: Switch from utf8 strings to unicode.

2004-11-15 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DateDisplay.py: Remove localized displayers.
	* src/DateParser.py: Remove localized parsers.
	* src/DateHandler.py: Remove hard-coded localization assignments;
	load localized classes from dates directory.
	* src/const.py.in: Add datesDir constant.
	* src/dates/Date_ru.py: Add to CVS.
	* src/dates/Date_fr.py: Add to CVS. 
	* src/dates/Makefile.am: Add to CVS. 
	* src/dates/.cvsignore: Add to CVS. 
	* configure.in: Generate src/dates/Makefile.
	* src/Makefile.am: Add dates to SUBDIRS.

2004-11-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DateParser.py: handle leap year in gregorial validity check
	* src/MergeData.py: Preserve more data when merging 
	the 1.0.X patch from Julio Sanchez)
	* src/plugins/ReadGedcom.py: Attach top leve source to the
	person instead of the primary name (ported from	the 1.0.X patch 
	from Julio Sanchez)
	* src/const.py: Add support for "Number of Children" attribute
	(GEDCOM NCHI) (ported from the 1.0.X patch from Julio Sanchez)

2004-11-12 Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py (person_name): Handle surname prefix (patch
	from Julio Sanchez).

2004-11-11 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DateDisplay.py: Add Russian displayer.

2004-11-10 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DateHandler.py: Add Russian displayer.
	* src/DateParser.py: Correct parsers -- proper unicode conversions.
	* src/DateDisplay.py: Add Russian displayer.

2004-11-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: handle the new "dont-ask" key