@@ -9,6 +9,8 @@
 	* src/dates/Date_ru.py: Switch from utf8 strings to unicode.
 	* src/dates/Date_fr.py: Switch from utf8 strings to unicode.
 
+	* src/DateParser.py: Factor out small matching chunks.
+
 2004-11-15 Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/DateDisplay.py: Remove localized displayers.
 	* src/DateParser.py: Remove localized parsers.
